# rust_template

./: .gitignore  .tarpaulin.toml  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTING.md.mustache  Cargo.toml  Cargo.toml.mustache  LICENSE  LICENSE.mustache  Readme.md  Readme.md.mustache  book.toml  book.toml.mustache  data.json  release-plz.toml
.github/ISSUE_TEMPLATE/: 1-bug.md  1-bug.md.mustache  config.yml  config.yml.mustache
.github/workflows/: website.yaml
benches/: rev_comp.rs  rev_comp.rs.mustache
docs/: SUMMARY.md
src/: cli.rs  error.rs  error.rs.mustache  lib.rs  lib.rs.mustache  main.rs
tests/: functional.rs  help.rs
